# PlainMint

./: .gitignore  AGENTS.md  PlainMint_PRD.md  PlainMint_TODO.md  README.md  build-windows.cmd
.github/scripts/: generate-release-notes.mjs
.github/workflows/: ci.yml  release.yml
app/: DESIGN.md  design-qa.md  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.mjs
app/scripts/: build-windows.ps1  prepare-release-config.mjs  set-version.mjs
app/src/: App.autoSave.test.tsx  App.fileWatch.test.tsx  App.startupEditor.test.tsx  App.tabInteractions.test.tsx  App.tsx  App.update.test.tsx  autoSavePolicy.test.ts  autoSavePolicy.ts  closePolicy.test.ts  closePolicy.ts  codeMirrorCsp.test.ts  codeMirrorCsp.ts  documentName.test.ts  documentName.ts  documentTemplates.test.ts  documentTemplates.ts  editorRuntime.ts  fontSettings.test.ts  fontSettings.ts  i18n.test.ts  i18n.ts  languageMetadata.ts  languageRegistry.test.ts  languageRegistry.ts  main.tsx  openedDocumentSearch.test.ts  openedDocumentSearch.ts  recoveryPolicy.test.ts  recoveryPolicy.ts  saveFolderPolicy.test.ts  saveFolderPolicy.ts  searchMatcher.test.ts  searchMatcher.ts  searchPolicy.test.ts  searchPolicy.ts  store.test.ts  store.ts  styles.css  syntaxHighlighting.ts  textChanges.ts  (+5 more)
app/src-tauri/: Cargo.toml  tauri.conf.json  tauri.release.conf.json.example
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: lib.rs  main.rs
app/src/components/: ConflictCompareView.tsx  SettingsModal.test.tsx  SettingsModal.tsx  (+2 more)
(+3 files in other folders)
